<resources>
    <string name="app_name">Social X Test</string>
    <string name="social">Social</string>
    <string name="x">X</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="signin_into_your_n_account">SignIn into your\n Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="create_an_n_account">Create an\n account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="contact_no">Contact no</string>
    <string name="term_amp_condition"><u>term &amp; condition</u></string>
    <string name="fetching_articles">Fetching Articles</string>
    <string name="Client_id">580185392190-kj7t4du8jg75pjv55369neubvkn9gdbr.apps.googleusercontent.com</string>


</resources>