<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_Gray"
        tools:context=".SignUp">

        <LinearLayout
            android:id="@+id/header_tile"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@color/color_Red"
            android:gravity="center_vertical"
            android:paddingStart="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabs_tile"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@drawable/stroke_shape_left_right_down_curve"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tile">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login" />

            <TextView

                android:textColor="@color/white"
                android:background="@drawable/solid_shape_left_right_down_curve"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_up" />

        </LinearLayout>

        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@drawable/solid_shape_left_right_up_top"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solid_shape_left_right_up_down_curve"
            app:layout_constraintBottom_toTopOf="@id/register_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs_tile">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/create_account_tile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/create_an_n_account"
                        android:textColor="@color/color_Red"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/create_account_tile" />

                    <EditText
                        android:id="@+id/name_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name_label" />

                    <TextView
                        android:id="@+id/email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name_edittext" />

                    <EditText
                        android:id="@+id/email_id_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_label" />

                    <TextView
                        android:id="@+id/contact_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/contact_no"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_id_edittext" />

                    <LinearLayout
                        android:id="@+id/contact_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/contact_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/contact_container" />

                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_label" />


                    <CheckBox
                        android:id="@+id/i_agree_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/color_Red"
                        android:text="I agree with"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_edittext" />

                    <TextView
                        android:id="@+id/term_condition_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/term_amp_condition"
                        android:textColor="@color/color_Red"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/i_agree_checkbox"
                        app:layout_constraintStart_toEndOf="@id/i_agree_checkbox"
                        app:layout_constraintTop_toTopOf="@id/i_agree_checkbox" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/i_agree_checkbox">

                        <TextView
                            android:id="@+id/already_have_account_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Already have an Account ? " />

                        <TextView
                            android:id="@+id/signin_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sign In!"
                            android:textColor="@color/color_Red"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>