<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_Gray"
        tools:context=".Login">

        <LinearLayout
            android:id="@+id/header_tile"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@color/color_Red"
            android:gravity="center_vertical"
            android:paddingStart="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/social"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabs_tile"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@drawable/stroke_shape_left_right_down_curve"
            android:weightSum="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_tile">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/solid_shape_left_right_down_curve"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sign_up" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="?listPreferredItemHeight"
            android:background="@drawable/solid_shape_left_right_up_top"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/solid_shape_left_right_up_down_curve"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabs_tile">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/sign_in_tile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signin_into_your_n_account"
                        android:textColor="@color/color_Red"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/email_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/email"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/sign_in_tile" />

                    <EditText
                        android:id="@+id/email_id_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_label" />

                    <TextView
                        android:id="@+id/password_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="Password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/email_id_edittext" />

                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_label" />

                    <TextView
                        android:id="@+id/forgot_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/color_Red"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password_edittext" />

                    <TextView
                        android:id="@+id/login_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/login_with"
                        android:textColor="#500000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/forgot_password_button" />

                    <ImageView
                        android:id="@+id/google_signin_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/google_logo"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/facebook_signin_image"
                        app:layout_constraintTop_toBottomOf="@id/login_label" />

                    <ImageView
                        android:id="@+id/facebook_signin_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/fb"
                        app:layout_constraintLeft_toRightOf="@id/google_signin_image"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/login_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/google_signin_image">

                        <TextView
                            android:id="@+id/dont_have_acount_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Don't have an Account ?"
                            android:textAlignment="viewEnd"
                            android:textColor="#500000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/register_now_label"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="4dp"
                            android:text="Register Now"
                            android:textColor="#ff0000"
                            android:textSize="16sp"
                            android:textStyle="bold"

                            />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>